--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sanity/client": "^6.10.0"
+		"@sanity/client": "^6.10.0",
+		"@sanity/image-url": "^1.0.2"
 	}
 }
