--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sanity/client": "^6.10.0",
-		"@sanity/image-url": "^1.0.2"
+		"@sanity/image-url": "^1.0.2",
+		"firebase": "^10.7.1"
 	}
 }
