--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@sveltejs/kit": "^1.0.0-next.587",
-		"@types/gtag.js": "^0.0.18",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.16",
@@ -35,6 +34,7 @@
 	"dependencies": {
 		"@sanity/client": "^6.10.0",
 		"@sanity/image-url": "^1.0.2",
+		"@vercel/analytics": "^1.1.1",
 		"firebase": "^10.7.1"
 	}
 }
